# reverse-engineering-diary

./: README.md
Simpliest Hook In My life/hooking_method/: Cargo.toml
Simpliest Hook In My life/hooking_method/src/: lib.rs
Simpliest Hook In My life/to_hook/: Cargo.toml
Simpliest Hook In My life/to_hook/src/: main.rs
free_console/: Cargo.toml
free_console/src/: lib.rs
jni-rust/: Cargo.toml
jni-rust/src/: lib.rs
rewrite_pixels_from_another_window/: Cargo.toml
rewrite_pixels_from_another_window/src/: main.rs
rust_ffi_interesting_calls/: Cargo.toml
rust_ffi_interesting_calls/src/: main.rs
