[package]
name = "rewrite_pixels_from_another_window"
version = "0.1.0"
edition = "2024"

[dependencies]

windows = { version = "0.61.1", features = ["Win32_System_WindowsProgramming", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_SystemServices", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL"] }
